Update: Project pages

--- a/project/index.html
+++ b/project/index.html
@@ -3,22 +3,36 @@
     <head>
         <link rel="stylesheet" href="css/default.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-        <title>Home</title>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="jquery.fittext.js"></script>
+        <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+        <title class="fitText">Home</title>
     </head>
     <body>
         <header>
-            <nav id="siteLinks">Nav Links Here</nav>
-            <h1>Rebekah Vanstory</h1>
+            <nav id="siteLinks" class="fitText">Nav Links Here</nav>
+            <h1 class="fitText">Rebekah Vanstory</h1>
         </header>
         <main>
             <br><br><br><br>
-            <div id="center">
-                <h3>Rebekah Vanstory's Online Portfolio</h3>
+            <h3 class="mov" id="center">
+            </h3>
+            <div id="center" class="fitText">
                 <p>This website is a portfolio for Rebekah Vanstory. A student at UNCC and is currently applying to PA schools.</p>
             </div>
         </main>
             <footer>
             </footer>
             <script src="scripts/default.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+            <script>
+                var typed = new Typed(".mov",{
+                strings: ["work", "Rebekah Vanstory's Online Portfolio"] ,
+                typeSpeed: 100,
+                backSpeed: 100,
+                loop: false
+                })
+            </script>
+            <link rel="stylesheet" href="css/default.css">    
     </body>
 </html>
