--- a/project/qualifications.html
+++ b/project/qualifications.html
@@ -3,18 +3,36 @@
     <head>
         <link rel="stylesheet" href="css/default.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="jquery.fittext.js"></script>
         <title>Qualifications</title>
     </head>
     <body>
-        <header>
+        <header class="fitText">
             <nav id="siteLinks">Nav Links Here</nav>
             <h1>Qualifications</h1>
         </header>
         <main>
             <br><br><br><br>
-            <div id="center">
+            <div id="center" class="fitText">
+                <h2>Skills</h2>
+                <p>Leadership, Intrapersonal communication, empathy, willingness to learn, time
+                    management, team player, problem-solving abilities, attention to detail, and flexibility</p>
                 <h2>Work Experience</h2>
-                <p>Rebekah is currently working at Iredell Memorial Hospital.</p>
+                <h3>Iredell Health System / CNA</h3>
+                <p>February 2021-Present, Statesville, NC</p>
+                <p>Assist patients with tasks of daily living, obtained vital signs, observed intake and output,
+                    encouraged mobility, and accurately documented in EMRs</p>
+                <p>Communicate with nursing staff regarding patient statuses such as abnormal findings, and
+                    skin tears, and assisted them with dressing changes, transfers, and other patient care tasks.</p>
+                <h3>Plato’s Closet / Senior Employee</h3>
+                <p>April 2018- April 2021, Hickory, NC</p>
+                <p>Exercised customer service skills by assisting customers with shopping needs such as
+                    accessing the dressing room, checking out, returns, and dropping off items for sale
+                    Assisted management with sorting clothes, assigning tasks to other employees, and
+                    opening/closing tasks
+                </p>
+                
             <div id="center"></div>
         </main>
             <footer>
