--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					<div class="dropdown-content">
 						<a href="itis3135">ITIS3135</a>
 						<a href="aboutme.html">About Me</a>
-						<a href="ITCS3162"></a>
+						<a href="ITCS3162">ITCS 3162</a>
 					</div>
 				</nav>
 				</div>
