--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
 					<button class="dropbtn">Menu</button>
 					<div class="dropdown-content">
 						<a href="itis3135">ITIS3135</a>
+						<a href="aboutme.html">About Me</a>
+						<a href="ITCS3162">ITCS 3162</a>
 					</div>
 				</nav>
 				</div>
