--- a/aboutme.html
+++ b/aboutme.html
@@ -6,13 +6,11 @@
 	</head>
 	<body>
 		<header>
-			<div class="topnav">
-					<div class="dropdown-content">
-						<a href="itis3135">ITIS3135</a>
-						<a href="aboutme.html">About Me</a>
-						<a href="ITCS3162">ITCS 3162</a>
-					
-				</div>
+			<nav>
+				<a href="itis3135">ITIS3135</a>
+				<a href="aboutme.html">About Me</a>
+				<a href="ITCS3162">ITCS 3162</a>
+			</nav>	
 		</header>
 			<h1 class="page-title">Joseph Vanstory</h1>
 			<div class="text">
