--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
 	<body>
 		<header>
 			<nav>
-				<a href="itis3135">ITIS3135</a>
-				<a href="aboutme.html">About Me</a>
-				<a href="ITCS3162">ITCS 3162</a>
+				<a href="itis3135">ITIS3135 &nbsp; &nbsp;|</a>
+				<a href="aboutme.html">About Me &nbsp; &nbsp;|</a>
+				<a href="ITCS3162">ITCS 3162 &nbsp; &nbsp;</a>
 			</nav>	
 		</header>
 			<h1 class="page-title">Joseph Vanstory</h1>
