--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 				<nav class="dropdown">
 					<button class="dropbtn">Menu</button>
 					<div class="dropdown-content">
-						<a href="itis3135">ITIS3135 &nbsp; &nbsp;|</a>
-						<a href="index.html">Home &nbsp; &nbsp;|</a>
-						<a href="ITCS3162">ITCS 3162 &nbsp; &nbsp;</a>
+						<a href="itis3135">ITIS3135</a>
+						<a href="aboutme.html">About Me</a>
+						<a href="ITCS3162">ITCS 3162</a>
 					</div>
 				</nav>
 				</div>
