--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 		<header>
 			<nav>
 				<a href="itis3135">ITIS3135 &nbsp; &nbsp;|</a>
-				<a href="aboutme.html">About Me &nbsp; &nbsp;|</a>
+				<a href="index.html"> Home &nbsp; &nbsp;|</a>
 				<a href="ITCS3162">ITCS 3162 &nbsp; &nbsp;</a>
 			</nav>	
 		</header>
