Update styles link

--- a/ITCS3162/index.html
+++ b/ITCS3162/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Personal Webpage || Joseph Vanstory</title>
-		<link rel="stylesheet" href="itis3135/styles/default.css">    
+		<link rel="stylesheet" href="../styles/default.css">    
 	</head>
 	<body>
 		<header>
