--- a/ITCS3162/index.html
+++ b/ITCS3162/index.html
@@ -18,7 +18,8 @@
 				</div>
 				<br>
 			<div>
-				<a href="project1.html">Project 1</a>
+				<a href="project1.html">Project 1 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+				<a href="project2.html">Project 2</a>
 			</div>
 		</header>
 		
