--- a/ITCS3162/index.html
+++ b/ITCS3162/index.html
@@ -19,7 +19,8 @@
 				<br>
 			<div>
 				<a href="project1.html">Project 1 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
-				<a href="project2.html">Project 2</a>
+				<a href="project2.html">Project 2 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+				<a href="project3.html">Project 3</a>
 			</div>
 		</header>
 		
