--- a/ITCS3162/index.html
+++ b/ITCS3162/index.html
@@ -20,7 +20,8 @@
 			<div>
 				<a href="project1.html">Project 1 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
 				<a href="project2.html">Project 2 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
-				<a href="project3.html">Project 3</a>
+				<a href="project3.html">Project 3 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+				<a href="project4.html">Project 4</a>
 			</div>
 		</header>
 		
