Update: Added FinalProject Page

--- a/ITCS3162/index.html
+++ b/ITCS3162/index.html
@@ -21,7 +21,8 @@
 				<a href="project1.html">Project 1 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
 				<a href="project2.html">Project 2 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
 				<a href="project3.html">Project 3 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
-				<a href="project4.html">Project 4</a>
+				<a href="project4.html">Project 4 &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+				<a href="FinalProject.html">Final Project</a>
 			</div>
 		</header>
 		
