Update: Image links

--- a/ITCS3162/FinalProject.html
+++ b/ITCS3162/FinalProject.html
@@ -89,11 +89,11 @@
                 The project underscored the importance of adopting a comprehensive approach to performance evaluation. This realization surfaced when I initially encountered a seemingly flawless alignment between the graph of my ARIMA model and the actual CPI values. Although this alignment suggested accurate predictions, it raised concerns, especially in light of the subpar performance scores. I began suspecting that the ARIMA model might be overfitting the data, struggling with generalization to new or unseen data. This suspicion prompted me to explore the Naive model, which, in contrast, yielded more favorable results.
 
                 Throughout this course, a pivotal lesson emerged—emphasizing the significance of thoroughly understanding the intricacies of the data under consideration. This knowledge is essential for crafting detailed and accurate models. Furthermore, the experience underscored the critical importance of identifying the limitations of models and not relying on them blindly, especially when faced with scenarios where their performance may falter.            </p>
-            <img src="/images/modelData.png" alt="Model">
-            <img src="/images/completeData.png" alt="Complete">
+            <img src="/ITCS3162/images/modelData.png" alt="Model">
+            <img src="/ITCS3162/images/completeData.png" alt="Complete">
             <figcaption>Raw data</figcaption>
-            <img src="/images/CombinedValues.png" alt="CombinedValues">
-            <img src="/images/NaiveForecast.png" alt="Naive">
+            <img src="/ITCS3162/images/CombinedValues.png" alt="CombinedValues">
+            <img src="/ITCS3162/images/NaiveForecast.png" alt="Naive">
 			<br>
 
 			<h2>Impact Section</h2>
@@ -104,7 +104,7 @@
 
 			<h2>Code/References</h2>
 			<p>
-                <a href="https://chat.openai.com/share/6ff162f5-9d55-4ff4-9765-bd2399534a8a">ChatGPT</a>
+                <a href="https://chat.openai.com/share/6ff162f5-9d55-4ff4-9765-bd2399534a8a">ChatGPT</a> <br>
                 <a href="https://www.kaggle.com/joevanstory1/finalproject">Code</a>
             </p>
 		</main>
