--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 						<a href="itis3135">ITIS3135</a>
 						<a href="aboutme.html">About Me</a>
 						<a href="ITCS3162">ITCS 3162</a>
+						<a href="game">Mini Game</a>
 					</div>
 				</nav>
 				</div>
