Update: added links

--- a/game/index.html
+++ b/game/index.html
@@ -37,6 +37,19 @@
     </div>
 </body>
 <footer class="footer">
+    <a href="https://github.com/Jvanstory">Github &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+	<a href="https://jvanstory.github.io/">Github Webpage &nbsp; &nbsp;|&nbsp; &nbsp;</a>
+	<a href="https://www.linkedin.com/in/joe-vanstory-095193240/">Linkedin &nbsp; &nbsp;</a>
     <p id="bottomText">work in progress</p>
 </footer>
 </html>
+
+<!-- TODO
+Create more game modes:
+timed game mode
+think of more
+
+Make it look good
+add custom or better looking arrows
+make the highligh look better than just yellow background
+-->
